# reproq-django

./: .gitignore  AGENTS.md  BACKLOG.md  GEMINI.md  README.md  RENDER.md  pyproject.toml
.gemini/: GEMINI.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  deployment.md  determinism.md  index.html  payloads.md
reproq_django/: models.py
scripts/: dev_bootstrap.sh
src/reproq_django/: __init__.py  admin.py  apps.py  backend.py  concurrency.py  context.py  db.py  db_router.py  executor.py  memlog.py  models.py  proxy.py  recurring.py  serialization.py  signals.py  tasks.py  tui_auth.py  urls.py  views.py  workflows.py
src/reproq_django/management/commands/: reproq.py  reproq_check.py  reproq_health.py  reproq_init_executor.py
src/reproq_django/migrations/: 0001_baseline.py  0001_initial.py  0001_task_runs.py  0002_add_failure_fields.py  0002_dedupe_active.py  0002_taskrun_indexes.py
src/reproq_django/resources/: render_start.sh
src/reproq_django/templates/admin/reproq_django/taskrun/: change_list.html
src/reproq_django/templates/reproq_tui/: authorize.html  login.html
tests/: conftest.py  test_backend.py  test_contracts.py  test_db_router.py  test_management_commands.py  test_memlog.py  test_recurring.py  test_serialization.py  test_tui_low_memory.py
