[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reproq-django"
version = "0.1.510"
description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
readme = "README.md"
authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=6.0,<7.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reproq_django = [
    "templates/admin/reproq_django/taskrun/change_list.html",
    "resources/*.yaml",
    "resources/*.toml",
]
